istio-manifests/VirtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rgrpc
  namespace: rgrpc-dev
  resourceVersion: '16515454'
spec:
  gateways:
    - rgrpc
  hosts:
    - dev.api.rakour.com
  http:
    - match:
        - uri:
            prefix: /user
      route:
        - destination:
            host: user-http
            port:
              number: 9001
    - match:
        - uri:
            prefix: /permission
      route:
        - destination:
            host: permission
            port:
              number: 80
    - match:
        - uri:
            prefix: /auth
      route:
        - destination:
            host: auth-http
            port:
              number: 9001
